--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 body {
   font-family: Bebas Nueu, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: oldlace;
+  background-color: rgb(235, 185, 121);
 }
 
 .banner {
   text-align: center;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
   background-color: orangered;
 }
 
@@ -28,13 +27,38 @@ p {
   margin: 2em;
 }
 
+/* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: rgb(83, 57, 1);
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
+
 @media screen and (min-width:450px) {
   .button {
     display: none;
   }
 
+  .banner {
+    flex-wrap: wrap;
+  }
+
   .bar {
     width: 100%;
+    padding: 1em;
   }
 
   .title {
@@ -43,13 +67,71 @@ p {
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 2em;
     width: 30%;
   }
-  
+
   p {
     margin-top: auto;
     width: 70%;
     float: right;
+  }
+
+  .bar_item {
+    border-right: 2px solid rgba(128, 128, 128, 0.623);
+    border-left: 2px solid rgba(128, 128, 128, 0.623);
+    padding: 0.5em;
+    margin: 0.5em;
+    background-color: rgb(255, 196, 174);
+  }
+}
+
+@media screen and (min-width:650px) {
+  h1 {
+    font-size: 3em;
+  }
+
+  p {
+    font-size: 1.3em;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .title {
+    width: 95%;
+  }
+
+  .button {
+    width: 10%;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .bar {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Dropdown button on hover & focus */
+  .button:hover, .button:focus {
+    background-color: #2980B9;
+  }
+
+  /* Links inside the dropdown */
+  .bar a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {
+    display:block;
   }
 }
