--- a/SASS/styles.scss
+++ b/SASS/styles.scss
@@ -1,6 +1,165 @@
+:root {
+    font-size: 12px;
+
+    @media screen and (min-width: 320px) {
+        font-size: calc(12px + 6 * ((100vw - 320px) / 680));
+    }
+
+    @media screen and (min-width: 1000px) {
+        font-size: 18px;
+    }
+}
+
 
 body {
     min-height: 100vh;
+    font-family: "Cairo", sans-serif;
+
+    .navbar {
+        transition: all 0.4s;
+
+        .nav-link {
+            color: #fff;
+
+            &:hover,
+            &:focus {
+                color: #fff;
+                text-decoration: none;
+            }
+        }
+
+        .navbar-brand {
+            display: none;
+            // color: #fff;
+        }
+
+        @media screen and (min-width: 991.98px) {
+
+            &.active {
+                background: #fff;
+                box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+
+                .nav-link {
+                    color: #555;
+
+                    &:hover,
+                    &:focus {
+                        color: #555;
+                        text-decoration: none;
+                    }
+                }
+
+                .navbar-brand {
+                    display: block;
+                    color: #555;
+                }
+            }
+        }
+
+
+        @media (max-width: 991.98px) {
+            background: #555;
+
+            .navbar-brand,
+            .nav-link {
+                display: block;
+                color: #fff;
+            }
+        }
+    }
+
+    #page-header {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .html-tags {
+            font-size: 3rem;
+            font-weight: 600;
+            -webkit-text-stroke: 0.1px white;
+            -webkit-text-fill-color: black;
+        }
+    }
+
+    #skills {
+        min-height: 100vh;
+        
+        button { display: none; }
+        .collapsed {
+            @media screen and (max-width: 991.98px) {
+                .card-container { display: none; }
+                .card-container:nth-child(-n+4) { display: flex; }
+
+                & + button { display: inline; }
+            }
+        }
+
+        .skill-card {
+            transition: all 0.7s;
+            border-radius: 20px;
+            background-color: #fff0c9fb;
+            -webkit-box-shadow: 10px 10px 30px -19px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 10px 10px 30px -19px rgba(0, 0, 0, 0.75);
+            box-shadow: 10px 10px 30px -19px rgba(0, 0, 0, 0.75);
+
+
+            &:hover {
+                -webkit-box-shadow: 10px 12px 35px -2px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 10px 12px 35px -2px rgba(0, 0, 0, 0.75);
+                box-shadow: 10px 12px 35px -2px rgba(0, 0, 0, 0.75);
+            }
+
+            h4 {
+                font-weight: bold;
+            }
+
+            .fa-html5 {
+                color: #f06529;
+            }
+
+            .fa-css3-alt {
+                color: #264de4
+            }
+
+            .fa-bootstrap {
+                color: #563d7c;
+            }
+
+            .fa-sass {
+                color: #CD6799;
+            }
+
+            .fa-js-square {
+                color: #f0db4f;
+            }
+
+            .fa-palette {
+                color: #a23bf7;
+            }
+
+            .fa-python {
+                color: #FFD43B;
+            }
+
+            .fa-node, .fa-node-js {
+                color: #3C873A;
+            }
+
+            .fa-file-alt {
+                color: #5094ff;
+            }
+
+            .fa-envira {
+                color: #3FA037;
+            }
+
+            .fa-chart-bar {
+                color: #a921f5;
+            }
+        }
+    }
+
     #footage {
         background-image: url('../images/footage.jpg');
         background-position: center;
