--- a/SASS/partials/_projects.scss
+++ b/SASS/partials/_projects.scss
@@ -34,6 +34,10 @@ body {
             &#calc-img {
                 background-image: url(../images/projects/expression-calc.png);
             }
+
+            &#shohra-img {
+                background-image: url(../images/projects/shohra.png);
+            }
         }
 
         h3 {
