--- a/SASS/partials/_skills.scss
+++ b/SASS/partials/_skills.scss
@@ -91,6 +91,10 @@ body {
             .fa-chart-bar {
                 color: #a921f5;
             }
+
+            .fa-angular {
+                color: #a6120d;
+            }
         }
     }
 }
